--- a/setup/gui/uvolman.desktop
+++ b/setup/gui/uvolman.desktop
@@ -6,3 +6,7 @@ Icon=${SNAP}/meta/gui/uVolMan.png
 Terminal=false
 Type=Application
 X-Ubuntu-Touch=true
+X-Ubuntu-Splash-Color=#225684
+X-Ubuntu-Splash-Title=uVolMan
+X-Ubuntu-Splash-Show-Header=true
+X-Ubuntu-Splash-Image=${SNAP}/meta/gui/uVolMan.png
